--- a/spacy.ipynb
+++ b/spacy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_trf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(u\"Tesla is looking at buying US startup for $6 million\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chauh\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Tesla PROPN nsubj\n",
+      "is AUX aux\n",
+      "looking VERB ROOT\n",
+      "at ADP prep\n",
+      "buying VERB pcomp\n",
+      "US PROPN compound\n",
+      "startup NOUN dobj\n",
+      "for ADP prep\n",
+      "$ SYM quantmod\n",
+      "6 NUM compound\n",
+      "million NUM pobj\n"
      ]
     }
    ],
    "source": [
-    "nlp = spacy.load('en_core_web_trf')"
+    "for token in doc:\n",
+    "    print(token.text, token.pos_, token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('transformer',\n",
+       "  <spacy_transformers.pipeline_component.Transformer at 0x28807a9a8c0>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x28807a9a5c0>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x28807973f40>),\n",
+       " ('attribute_ruler',\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x28806424a80>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x2880649b100>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x28807973ed0>)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['transformer', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc2 = nlp(u\"Tesla isn't      looking into startups anymore.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla PROPN nsubj\n",
+      "is AUX aux\n",
+      "n't PART neg\n",
+      "      SPACE dep\n",
+      "looking VERB ROOT\n",
+      "into ADP prep\n",
+      "startups NOUN pobj\n",
+      "anymore ADV advmod\n",
+      ". PUNCT punct\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc2:\n",
+    "    print(token.text, token.pos_, token.dep_)"
    ]
   },
   {
