--- a/3. stemming.ipynb
+++ b/3. stemming.ipynb
@@ -110,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = ['generous', 'generation', 'generously', 'generate']"
+    "words = ['generous', 'generation', 'generously', 'generate', 'mice']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,8 @@
       "generous -----> generous\n",
       "generation -----> generat\n",
       "generously -----> generous\n",
-      "generate -----> generat\n"
+      "generate -----> generat\n",
+      "mice -----> mice\n"
      ]
     }
    ],
@@ -137,6 +138,13 @@
     "for word in words:\n",
     "    print(word + ' -----> '+ s_stemmer.stem(word))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
