Updated entity recog

--- a/PoS Tagging/3.1. ner_part2.ipynb
+++ b/PoS Tagging/3.1. ner_part2.ipynb
@@ -136,10 +136,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from spacy.tokens import Span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROD = doc.vocab.strings[u\"PRODUCTS\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2689272359382549672, 6, 8), (2689272359382549672, 11, 13)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found_matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_ents = [Span(doc, match[1], match[2], label = PROD) for match in found_matches]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc.ents = list(doc.ents) + new_ents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vacuum cleaner - PRODUCTS - None\n",
+      "vacuum cleaner - PRODUCTS - None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\python\\NLP\\nlp_bootcamp\\venv\\lib\\site-packages\\spacy\\glossary.py:19: UserWarning: [W118] Term 'PRODUCTS' not found in glossary. It may however be explained in documentation for the corpora used to train the language. Please check `nlp.meta[\"sources\"]` for any relevant links.\n",
+      "  warnings.warn(Warnings.W118.format(term=term))\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_ents(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(u\"Originally I paid $29.95 for this car toy, but now it is marked as $10.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[29.95, 10]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ent for ent in doc.ents if ent.label_ == \"MONEY\"]"
+   ]
   }
  ],
  "metadata": {
